# AutoRAG

./: .gitignore  AutoRAG_CLI.md  docker-compose.yml  pyproject.toml  requirements.txt
autorag/: cli.py
autorag/database/: supabase.py
autorag/rag/: embeddings.py  pipeline.py  vector_store.py
autorag/utils/: config.py
