[project]
name = "autorag"
version = "0.1.0"
description = "A CLI tool that automates RAG hyperparameter optimization using Bayesian search and synthetic data generation"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = ["rag", "optimization", "llm", "ai", "retrieval", "bayesian", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "build>=1.3.0",
    "celery>=5.6.0",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "langchain-pinecone>=0.2.13",
    "openai>=2.14.0",
    "optuna>=4.6.0",
    "pinecone-client>=6.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "ragas>=0.4.2",
    "redis>=7.1.0",
    "rich>=14.2.0",
    "sentence-transformers>=3.3.1",
    "setuptools>=80.9.0",
    "supabase>=2.27.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "torch>=2.5.1",
    "twine>=6.2.0",
    "typer[all]>=0.20.1",
    "wheel>=0.45.1",
]

[project.scripts]
autorag = "autorag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autorag"]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
]
